test/parsing/errors/reserved-bools.chpl
var true = 0;

proc f(true) {
}

class true {
  var true =0;
}

type true = string;

proc true() {
}

proc test() {
  try {
  } catch true {
  }
}

var false = 0;

proc f2(false) {
}

class false {
  var false =0;
}

type false = string;

proc false() {
}

proc test2() {
  try {
  } catch false {
  }
}
